infra/k8s/cafeio-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeio-auth-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeio-auth
  template:
    metadata:
      labels:
        app: cafeio-auth
    spec:
      containers:
        - name: cafeio-auth
          image: jontopanotti/cafeio-auth
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: cafeio-auth-srv

spec:
  selector:
    app: cafeio-auth
  ports:
    - name: cafeio-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
