infra/k8s/cafeio-orders-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeio-orders-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeio-orders
  template:
    metadata:
      labels:
        app: cafeio-orders
    spec:
      containers:
        - name: cafeio-orders
          image: jontopanotti/cafeio-orders
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: cafeio-orders-srv

spec:
  selector:
    app: cafeio-orders
  ports:
    - name: cafeio-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
