infra/k8s/cafeio-products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeio-products-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeio-products
  template:
    metadata:
      labels:
        app: cafeio-products
    spec:
      containers:
        - name: cafeio-products
          image: jontopanotti/cafeio-products
          #image: us.gcr.io/cafeio-dev/cafeio-products
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: cafeio-products-srv

spec:
  selector:
    app: cafeio-products
  ports:
    - name: cafeio-products
      protocol: TCP
      port: 3000
      targetPort: 3000
