infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeio-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeio-client
  template:
    metadata:
      labels:
        app: cafeio-client
    spec:
      containers:
        - name: cafeio-client
          image: jontopanotti/cafeio-client
          #image: us.gcr.io/cafeio-dev/cafeio-client
---
apiVersion: v1
kind: Service
metadata:
  name: cafeio-client-srv
spec:
  selector:
    app: cafeio-client
  ports:
    - name: cafeio-client
      protocol: TCP
      port: 3000
      targetPort: 3000
