infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: cafe.io
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: cafeio-auth-srv
            port:
              number: 3000
      - path: /api/products/?(.*)
        pathType: Prefix
        backend:
          service:
            name: cafeio-products-srv
            port:
              number: 3000
      - path: /api/orders/?(.*)
        pathType: Prefix
        backend:
          service:
            name: cafeio-orders-srv
            port:
              number: 3000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: cafeio-client-srv
            port:
              number: 3000
  ingressClassName: nginx
